# rust-bitcoin-node

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: CI.yml
src/: bloom_filter.rs  codec.rs  constants.rs  full_node.rs  helper.rs  lib.rs  main.rs  peer.rs  pool.rs
src/blockchain/: chain.rs  chain_db.rs  chain_entry.rs  mod.rs
src/blockstore/: db.rs  mod.rs  records.rs
src/coins/: coin_entry.rs  coin_view.rs  coins.rs  mod.rs  undo_coins.rs
src/db/: batch.rs  disk.rs  key.rs  mod.rs  value.rs
src/error/: mod.rs
src/indexers/: addrindex.rs  filterindex.rs  mod.rs  txindex.rs
src/mempool/: mempool.rs  mod.rs
src/mining/: miner.rs  mod.rs  template.rs
src/net/: bloom_filter.rs  codec.rs  compact_block.rs  connection.rs  mempool.rs  mod.rs  new.rs  new_peer.rs  new_peer_manager.rs  newp2p.rs  p2p.rs  peer.rs  peer_manager.rs
src/net/old/: newp2p.rs  p2p.rs  proper.rs
src/primitives/: block.rs  mod.rs  script.rs  tx.rs
src/protocol/: consensus.rs  mod.rs  network.rs  timedata.rs  version_bits.rs
src/util/: mod.rs
src/verification/: block.rs  mod.rs  parallel_script_verifier.rs  tx.rs
tests/: chain.rs
