[package]
name = "rust_bitcoin_node"
version = "0.1.0"
authors = ["Jake Rawsthorne <jake@jakerawsthorne.co.uk>"]
edition = "2018"

[features]
test-utils = []

[dependencies]
bitcoin = { git="https://github.com/jrawsthorne/rust-bitcoin", branch = "master", features=["bitcoinconsensus", "rand"] }
log = "0.4"
env_logger = "0.8"
bytes = "1.0.1"
rocksdb = "0.21"
bitcoinconsensus = { git="https://github.com/jrawsthorne/rust-bitcoinconsensus", branch="0.21" }
regex = "1"
bitflags = "1"
maplit = "1.0.2"
parking_lot = "0.11"
rayon = "1.5"
thiserror = "1.0"
murmur3 = "0.5.1"
crossbeam-channel = "0.5"
anyhow = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"