[package]
name = "rust_bitcoin_node"
version = "0.1.0"
authors = ["Jake Rawsthorne <jake@jakerawsthorne.co.uk>"]
edition = "2018"

[features]
test-utils = []

[dependencies]
bitcoin = { git = "https://github.com/jrawsthorne/rust-bitcoin", branch = "master", features = [
    "bitcoinconsensus",
    "rand",
] }
log = "0.4.20"
env_logger = "0.10.0"
bytes = "1.5.0"
rocksdb = "0.21.0"
bitcoinconsensus = { git = "https://github.com/jrawsthorne/rust-bitcoinconsensus", branch = "0.21" }
regex = "1.9.6"
bitflags = "2.4.0"
maplit = "1.0.2"
parking_lot = "0.12.1"
rayon = "1.8.0"
thiserror = "1.0.49"
murmur3 = "0.5.2"
crossbeam-channel = "0.5.8"
anyhow = "1.0.75"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8.0"
