[package]
name = "rust_bitcoin_node"
version = "0.1.0"
authors = ["Jake Rawsthorne <jake@jakerawsthorne.co.uk>"]
edition = "2018"

[features]
test-utils = []

[dependencies]
bitcoin = { git = "https://github.com/jrawsthorne/rust-bitcoin", branch = "master", features = [
    "bitcoinconsensus",
    "rand",
] }
log = "0.4.20"
env_logger = "0.10.1"
bytes = "1.5.0"
rocksdb = "0.21.0"
bitcoinconsensus = { git = "https://github.com/jrawsthorne/rust-bitcoinconsensus", branch = "0.21" }
regex = "1.10.2"
bitflags = "2.4.1"
maplit = "1.0.2"
parking_lot = "0.12.1"
rayon = "1.8.0"
thiserror = "1.0.50"
murmur3 = "0.5.2"
crossbeam-channel = "0.5.10"
anyhow = "1.0.77"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8.1"
